reportbug (3.29) unstable; urgency=low

  * Send the version header in BTS queries.
  * Note version in which closed bugs were fixed in the bug listing.
  * Handle bug reports that don't exist (like #2).  (Closes: #376245)

 --

reportbug (3.28) unstable; urgency=low

  * Actually search sys.path for available UIs.  (Closes: #383665)
  * The urwid interface is mostly functional in this release; feel free
    to test it.

 -- Chris Lawrence <lawrencc@debian.org>  Fri, 18 Aug 2006 17:02:08 -0500

reportbug (3.27) unstable; urgency=medium

  * Fix string formatting bug in the SMTP username prompt in
    offer_configuration().  (Closes: #383583)
  * Ask the user if the bug still exists in that version to avoid
    automatically reopening reports.  (Closes: #383503)

 -- Chris Lawrence <lawrencc@debian.org>  Fri, 18 Aug 2006 11:04:23 -0500

reportbug (3.26) unstable; urgency=medium

  * The "don't be more clever than the patch-writer" release.
  * Instead of importing uis, search sys.path for them.

 -- Chris Lawrence <lawrencc@debian.org>  Wed, 16 Aug 2006 21:14:39 -0500

reportbug (3.25) unstable; urgency=low

  * Remove superfluous postinst and prerm scripts; python-central takes
    care of this now.  (Closes: #383024)

 -- Chris Lawrence <lawrencc@debian.org>  Mon, 14 Aug 2006 16:41:47 -0500

reportbug (3.24) unstable; urgency=low

  * Apply updated patch from Phillip Kern to work with the GNOME interface
    (which should appear in experimental soon).

 -- Chris Lawrence <lawrencc@debian.org>  Sun, 13 Aug 2006 10:17:27 -0500

reportbug (3.23) unstable; urgency=medium

  * Fix reportbug_ui_text.get_multiline().  (Closes: #382486)
  * Document that handling scripts must use #!/bin/bash to use getkey and
    yesno--this has always been the case since the days of bug, but never was
    documented anywhere.  (Closes: #294954)
  * Document pseudo-packages (and how to see the list recognized by
    reportbug) in reportbug(1).  (Closes: #379919)