@@ -3,6 +3,8 @@ reportbug (3.29) unstable; urgency=low
   * Send the version header in BTS queries.
   * Note version in which closed bugs were fixed in the bug listing.
   * Handle bug reports that don't exist (like #2).  (Closes: #376245)
+  * Fix ewrite() failure when % in message but no arguments.
+    (Closes: #384167)
 
  --
 
